-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0b1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0b1
-------------------

9/24/14
    - Fixed issue with failed tests in t_psse() on Windoze.

8/11/14
    - Modified savecase() to save fields bus_name and genfuel
      (both cell arrays of strings) if present. This is an
      experimental feature and the design may change in future
      versions.
    - Optionally return success flag from t_ok() and t_is().

8/4/14
    - Additional improvements to correctly handling PSS/E RAW
      files for revisions 24-28.

7/30/14
    - Fixed a bug in psse_convert() that resulted in incorrect
      bus voltage angles when importing from v29 or v30 files.
    - Enhanced PSS/E import code to handle additional versions
      prior to v29, improve reporting of version being used
      for parsing. Default version when not explicit is now v23.

7/24/14
    - Added line to cplex_options() to prevent default creation
      of clone1.log files when using parallel CPLEX routines
      (only effective for CPLEX 12.6.0.1 or later).
    - Fixed fatal error when uopf() shuts down all gens
      attempting to satisfy Pmin limits.

7/23/14
    - Fixed error in User's Manual description of LODF and
      further clarified text.


Changes since 4.1
-----------------

7/1/14
    - Released version 5.0b1.

6/27/14
    - Added support for LP solver GLPK which is built-in to
      Octave. Use 'opf.dc.solver' option 'GLPK'.
    - INCOMPATIBLE CHANGE: Removed optional 'max_it' field from
      opt argument to qps_matpower() and qps_*() family of
      functions (except qps_mips()).

6/13/14
    - Added ability for loadcase() to load MATPOWER case M-files
      that are not in the Matlab path by specifying an explicit